--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   font_awesome_flutter: ^8.5.0
-  speech_to_text: ^3.1.0
+#  speech_to_text: ^3.1.0
   highlight_text: ^0.7.2
   avatar_glow: ^1.2.0
   flutter_mobile_vision: ^0.1.4+1
