--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  font_awesome_flutter: ^8.5.0
+  font_awesome_flutter: ^10.1.0
   firebase_auth: ^3.3.18
   google_sign_in: ^5.3.1
 #  speech_to_text: ^3.1.0
@@ -31,6 +31,7 @@ dependencies:
   avatar_glow: ^1.2.0
   flutter_mobile_vision: ^0.1.4+1
   sqflite: ^2.0.2
+  flutter_svg: ^0.19.3
   provider: ^6.0.2
   path_provider: ^2.0.9
   intl: ^0.17.0
