--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   flutter_mobile_vision: ^0.1.4+1
   sqflite: ^2.0.2
   flutter_svg: ^0.19.3
+  modal_progress_hud: ^0.1.3
   provider: ^6.0.2
   path_provider: ^2.0.9
   intl: ^0.17.0
