--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,9 @@ dependencies:
   google_sign_in: ^5.3.1
 #  speech_to_text: ^3.1.0
   highlight_text: ^0.7.2
+  geolocator: ^7.4.0
+  http: ^0.13.3
+  flutter_spinkit: ^5.0.0
   avatar_glow: ^1.2.0
   flutter_mobile_vision: ^0.1.4+1
   sqflite: ^2.0.2
