--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,22 +68,29 @@ flutter:
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
 
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
+fonts:
+  - family: OpenSans
+    fonts:
+      - asset: assets/fonts/OpenSans-Regular.ttf
+        weight: 400
+      - asset: assets/fonts/OpenSans-Bold.ttf
+        weight: 700
+  - family: Quicksand
+    fonts:
+      - asset: assets/fonts/Quicksand-Light.ttf
+        weight: 300
+      - asset: assets/fonts/Quicksand-Medium.ttf
+        weight: 500
+      - asset: assets/fonts/Quicksand-Regular.ttf
+        weight: 400
+      - asset: assets/fonts/Quicksand-Bold.ttf
+        weight: 700
+
+  - family: Rubik
+    fonts:
+      - asset: assets/fonts/Rubik-Bold.ttf
+        weight: 700
+      - asset: assets/fonts/Rubik-Medium.ttf
+        weight: 500
+      - asset: assets/fonts/Rubik-Regular.ttf
+        weight: 400
