--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   avatar_glow: ^1.2.0
   flutter_mobile_vision: ^0.1.4+1
   sqflite: ^2.0.2
+  url_launcher: ^6.0.9
   flutter_svg: ^0.19.3
   shared_preferences: ^0.5.3+5
   fluttertoast: ^8.0.9
