--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   provider: ^6.0.2
   path_provider: ^2.0.9
   intl: ^0.17.0
+  firebase_ml_vision: ^0.9.2
+  image_picker: ^0.6.1+2
   
 
 dev_dependencies:
@@ -57,6 +59,7 @@ flutter:
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
+
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
