--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,6 @@ dependencies:
   geolocator: ^7.4.0
   http: ^0.13.3
   flutter_spinkit: ^5.0.0
-  avatar_glow: ^1.2.0
   flutter_mobile_vision: ^0.1.4+1
   sqflite: ^2.0.2
   url_launcher: ^6.0.9
@@ -37,6 +36,16 @@ dependencies:
   fluttertoast: ^8.0.9
   modal_progress_hud: ^0.1.3
   provider: ^6.0.2
+  flutter_tts: ^3.3.3
+  translator: ^0.1.7
+  firebase_ml_vision: ^0.9.10
+  image_picker: ^0.8.4+8
+  firebase_core: ^1.12.0
+  curved_navigation_bar: ^1.0.3
+  flutter_speed_dial: ^5.0.0+1
+  speech_to_text: ^5.4.3
+  avatar_glow: ^2.0.2
+  google_ml_kit: ^0.7.3
   path_provider: ^2.0.9
   intl: ^0.17.0
   firebase_ml_vision: ^0.9.2
